--- a/Docs/Passwords/30.10.2024.md
+++ b/Docs/Passwords/30.10.2024.md
@@ -6,6 +6,7 @@
 <br>
 User Data: </b>
 <br>
+<br>
 <li><b>Elliott21:Brener21</b></li>
 
 <br>
@@ -14,6 +15,7 @@ User Data: </b>
 <br>
 <br>
 <i>User Data: </i>
+<br>
 <br>
 <li><b>Vesuvius1086:Volcano9</b></li>
 <li><b>Eddy1267:Canada12</b></li>
@@ -28,5 +30,15 @@ User Data: </b>
 <br>
 User Data: </b>
 <br>
+<br>
 <li><b>Spitsi:impala67</b></li>
 
+<br>
+<br>
+<li>Webseite: </li> <a href="https://povmasters.com">Povmasters.com</a>
+<br>
+<br>
+User Data: </b>
+<br>
+<br>
+<li><b>agiedee:162TSF48c</b></li>
