--- a/Docs/Passwords/30.10.2024.md
+++ b/Docs/Passwords/30.10.2024.md
@@ -42,3 +42,19 @@ User Data: </b>
 <br>
 <br>
 <li><b>agiedee:162TSF48c</b></li>
+
+<br>
+<br>
+<li>Webseite: </li> <a href="https://members.wankitnow.com/">wankitnow.com</a>
+<br>
+<br>
+User Data: </b>
+<br>
+<br>
+<li><b>downstar:Working01</b></li>
+<li><b>Herriot85:Darrowby19</b></li>
+<li><b>Tiger101:Roaring20s</b></li>
+<li><b>dingyman:Taijile0303</b></li>
+<li><b>david229x:3Z9ss7qrJgCCbr</b></li>
+<li><b>luchok1993:13K24o57l68i9</b></li>
+<li><b>Paropes3:Hemiram24</b></li>
